--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -50,4 +50,17 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"/>
 
+    <TextView
+        android:id="@+id/txtCameraView"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/carouselView"
+        android:layout_alignTop="@id/carouselView"
+        android:text="asdfghjk"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#090909"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
 </RelativeLayout>
