V8 27/04/2020 Sols falta:  - incorporar imatges caca/rastre.  - buscador  - multiidioma  - base dades desde fitxer

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.petjadesapp.MainActivity">
     <item
-        android:id="@+id/home"
+        android:id="@+id/inici"
         android:orderInCategory="100"
         android:title="@string/txtMenuHome"
         app:showAsAction="never" />
