--- a/app/src/main/res/layout/content_animals_list.xml
+++ b/app/src/main/res/layout/content_animals_list.xml
@@ -7,9 +7,27 @@
     tools:context="activity.AnimalsListActivity"
     tools:showIn="@layout/activity_animals_list">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/txtSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Search..." />
+    </LinearLayout>
+
     <ListView
         android:id="@+id/listViewAnimals"
         android:layout_width="match_parent"
         android:layout_height="596dp"
-        android:layout_marginTop="57dp" />
+        android:layout_marginTop="57dp">
+
+    </ListView>
+
 </RelativeLayout>
