--- a/app/src/main/res/layout/content_animal_data.xml
+++ b/app/src/main/res/layout/content_animal_data.xml
@@ -21,7 +21,7 @@
                 android:layout_marginStart="21dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="21dp"
-                android:text="Title fo index toggle button"
+                android:text="Title fo index ibutton"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
                 android:backgroundTint="#FAF9F9"
                 android:onClick="showTrace"
                 android:scaleType="centerCrop"
-                android:src="@drawable/icon1"
+                android:src="@drawable/rastre"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ibDistribution"
                 app:layout_constraintTop_toBottomOf="@+id/imgViewAnimal" />
@@ -76,7 +76,7 @@
                 android:backgroundTint="#CEC8C8 "
                 android:onClick="showInfo"
                 android:scaleType="centerCrop"
-                android:src="@drawable/info48"
+                android:src="@drawable/descrip"
                 android:tint="#121111"
                 app:layout_constraintEnd_toStartOf="@+id/ibHabitat"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
                 android:backgroundTint="#FAF9F9"
                 android:onClick="showDistribution"
                 android:scaleType="centerCrop"
-                android:src="@drawable/icon2"
+                android:src="@drawable/distri"
                 app:layout_constraintEnd_toStartOf="@+id/ibTrace"
                 app:layout_constraintStart_toEndOf="@+id/ibHabitat"
                 app:layout_constraintTop_toBottomOf="@+id/imgViewAnimal" />
@@ -119,7 +119,7 @@
                 android:backgroundTint="#FAF9F9"
                 android:onClick="showHabitat"
                 android:scaleType="centerCrop"
-                android:src="@drawable/icon3"
+                android:src="@drawable/hab"
                 app:layout_constraintEnd_toStartOf="@+id/ibDistribution"
                 app:layout_constraintStart_toEndOf="@+id/ibDescription"
                 app:layout_constraintTop_toBottomOf="@+id/imgViewAnimal" />
