--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/ibListMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
         android:onClick="goToAnimalsListActivity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="185dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="152dp"
         android:text="@string/txtListMenu"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -49,7 +49,7 @@
         android:layout_width="185dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="388dp"
         android:text="@string/txtDichotomousMenu"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -63,15 +63,14 @@
         android:id="@+id/imageButton"
         android:layout_width="64dp"
         android:layout_height="59dp"
-        android:layout_marginStart="308dp"
-        android:layout_marginTop="203dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="329dp"
         android:backgroundTint="#FAF9F9"
         android:onClick="goToAboutActivity"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ibDicotomicaMenu"
-        app:srcCompat="@drawable/info" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/infop" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
