--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,8 +23,14 @@
         android:title="@string/txtMenuCamera"
         app:showAsAction="never" />
     <item
+        android:id="@+id/maps"
+        android:orderInCategory="100"
+        android:title="@string/txtMenuMaps"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/about"
         android:orderInCategory="100"
         android:title="@string/txtMenuAbout"
         app:showAsAction="never" />
+
 </menu>
