--- a/app/src/main/res/layout/content_maps_layout.xml
+++ b/app/src/main/res/layout/content_maps_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,11 +10,12 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Button" />
+        android:text="Save"
+        android:onClick="saveCoordinate"/>
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="600dp" />
+        android:layout_height="match_parent" />
 
-</LinearLayout>
+</FrameLayout>
