Data: 13/05/2020 - dialog fet - push a firebase funciona
MapAcitvity:
-localitzacio telf
-coordenades firebase en mapa
-usuaris
-check les meues, check totes.

Sols falta:
 - multiidioma strings
 - enrere dichotomous
 - txt carrusel view
 - botó retorn AboutActivity

--- a/app/src/main/res/layout/content_maps_layout.xml
+++ b/app/src/main/res/layout/content_maps_layout.xml
@@ -10,8 +10,8 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Save"
-        android:onClick="saveCoordinate"/>
+        android:text="@string/btn_save_coordinate"
+        android:onClick="showDialog"/>
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
