--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -32,5 +32,9 @@
         android:orderInCategory="100"
         android:title="@string/txtMenuAbout"
         app:showAsAction="never" />
-
+    <item
+        android:id="@+id/logOut"
+        android:orderInCategory="100"
+        android:title="@string/salir_sesion"
+        app:showAsAction="never" />
 </menu>
