Data: 15/05/2020 MapAcitvity: -coordenades firebase en mapa. -check les meues, check totes.
Sols falta:
 - multiidioma strings
 - enrere dichotomous
 - txt carrusel view
 - botó retorn AboutActivity

--- a/app/src/main/res/layout/activity_load.xml
+++ b/app/src/main/res/layout/activity_load.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lyloadActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LoadActivity">
+    tools:context="com.example.petjadesapp.activity.LoadActivity"
+    android:id="@+id/lyloadActivity">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="264dp"
-        android:text="Registro"
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="288dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="292dp"
+        android:background="#00FFFFFF"
+        android:onClick="signIn"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="signIn"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:src="@drawable/signin" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="164dp"
+        android:layout_height="161dp"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="107dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/iclauncher" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
