--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,8 +36,7 @@
         android:id="@+id/btnAbout"
         android:layout_width="57dp"
         android:layout_height="53dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="347dp"
+        android:layout_marginStart="336dp"
         android:backgroundTint="#00FAF9F9"
         android:onClick="goToAboutActivity"
         android:scaleType="fitCenter"
@@ -54,12 +53,12 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="#00FFFFFF"
+        android:onClick="goToAnimalsListActivity"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/ibIntroDicho"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/lobo_sombra"
-        android:onClick="goToAnimalsListActivity"/>
+        app:srcCompat="@drawable/lobo_sombra" />
 
     <ImageButton
         android:id="@+id/ibIntroDicho"
@@ -69,12 +68,12 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="46dp"
         android:backgroundTint="#00FFFFFF"
+        android:onClick="goToDicotomicActivity"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ibIntroList"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gatomontes_petjada"
-        android:onClick="goToDicotomicActivity"/>
+        app:srcCompat="@drawable/gatomontes_petjada" />
 
     <ImageButton
         android:id="@+id/ibIntroMaps"
@@ -84,12 +83,12 @@
         android:layout_marginTop="27dp"
         android:layout_marginEnd="33dp"
         android:backgroundTint="#00FFFFFF"
+        android:onClick="goToMapsActivity"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/ibIntroCamera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtIntroAnimalList"
-        app:srcCompat="@drawable/distri"
-        android:onClick="goToMapsActivity"/>
+        app:srcCompat="@drawable/distri" />
 
     <ImageButton
         android:id="@+id/ibIntroCamera"
@@ -99,12 +98,12 @@
         android:layout_marginTop="27dp"
         android:layout_marginEnd="46dp"
         android:backgroundTint="#00FFFFFF"
+        android:onClick="goToCameraActivity"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ibIntroMaps"
         app:layout_constraintTop_toBottomOf="@+id/txtIntroDicho"
-        app:srcCompat="@drawable/cameraicon"
-        android:onClick="goToCameraActivity"/>
+        app:srcCompat="@drawable/cameraicon" />
 
     <TextView
         android:id="@+id/txtIntroAnimalList"
