--- a/app/src/main/res/layout/activity_load.xml
+++ b/app/src/main/res/layout/activity_load.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lyloadActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.petjadesapp.activity.LoadActivity"
-    android:id="@+id/lyloadActivity">
+    android:orientation="vertical"
+    tools:context="com.example.petjadesapp.activity.LoadActivity">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="164dp"
+        android:layout_height="161dp"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="107dp"
+        android:src="@drawable/iclauncher" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -17,19 +25,7 @@
         android:background="#00FFFFFF"
         android:onClick="signIn"
         android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/signin" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="164dp"
-        android:layout_height="161dp"
-        android:layout_marginStart="123dp"
-        android:layout_marginTop="107dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/iclauncher" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
