--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -5,23 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.petjadesapp.CameraActivity">
+    tools:context="com.example.petjadesapp.activity.CameraActivity">
 
     <TextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
         android:layout_height="608dp"
         android:layout_alignParentTop="true" />
-
-    <!--<Button
-        android:id="@+id/btn_takepicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:text="take_picture" /> -->
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
@@ -38,29 +28,36 @@
         app:radius="5dp"
         app:slideInterval="3000"
         app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" />
+        app:strokeWidth="1dp" >
 
-    <ImageButton
-        android:id="@+id/btn_takepicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/camera24dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"/>
+    </com.synnapps.carouselview.CarouselView>
 
-    <TextView
-        android:id="@+id/txtCameraView"
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/carouselView"
-        android:layout_alignTop="@id/carouselView"
-        android:text="asdfghjk"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="#090909"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="550dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/btn_takepicture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="170dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/camera24dp" />
+
+        <Button
+            android:id="@+id/btn_showAnimal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="50dp"
+            android:text="show animal" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
