--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -15,8 +15,8 @@
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
-        android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_width="396dp"
+        android:layout_height="516dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -28,34 +28,40 @@
         app:radius="5dp"
         app:slideInterval="3000"
         app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" >
+        app:strokeWidth="1dp">
 
     </com.synnapps.carouselview.CarouselView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="145dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="561dp"
+        android:layout_marginTop="526dp"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/btn_takepicture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_marginStart="170dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:background="#00FFFFFF"
+            android:scaleType="center"
+            android:tint="#F3EFEF"
             app:srcCompat="@drawable/camera24dp" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_showAnimal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:text="show animal" />
+            android:background="#00FFFFFF"
+            android:scaleType="fitXY"
+            android:tint="#F3EFEF"
+            app:srcCompat="@drawable/infop" />
 
     </LinearLayout>
 
